--- a/README.adoc
+++ b/README.adoc
@@ -42,11 +42,15 @@ Please see the link:http://cloojure.github.io/doc/tupelo/tupelo.parse.html[tupel
 
 ==== Tupelo Schema - Type Definitions
 
-Enables type checking in Clojure code via link:https://github.com/plumatic/schema[Prismatic Schema].
+Enables type checking in Clojure code via link:https://github.com/plumatic/schema[Plumatic Schema].
 Please see link:https://github.com/cloojure/tupelo/blob/master/src/tupelo/schema.clj[the source code] for
 definitions, and
 link:https://github.com/cloojure/tupelo-datomic/blob/master/test/tst/tupelo_datomic/bond.clj[the
 James Bond example code] for examples of the type-checking in action.
+
+==== Tupelo Types - A helper namespace for Plumatic Schema
+
+Please see the link:http://cloojure.github.io/doc/tupelo/tupelo.types.html[tupelo.types] docs.
 
 ==== Tupelo Misc - A grab bag of functions that don't fit anywhere else (yet!)
 
@@ -546,7 +550,7 @@ always returns results in a vector:
 
 Within a processing chain, it is often desirable to verify that an intermediate value is
 within an expected range or of an expected type. The built-in `assert` function cannot be
-used for this purpose since it returns `nil`, and the Prismatic Schema `validate` can only
+used for this purpose since it returns `nil`, and the Plumatic Schema `validate` can only
 perform a limited amount of type testing.  The `(validate ...)` function performs
 arbitrary validation, throwing an exception if a non-truthy result is returned:
 
