--- a/README.adoc
+++ b/README.adoc
@@ -444,11 +444,9 @@ Did you know that Clojure has no equivalent to Java's `List.remove(int index)` f
    index    :- s/Int]
   ...)
 
-(is (= [  1 2 3 4] (drop-at (range 5) 0)))
-(is (= [0   2 3 4] (drop-at (range 5) 1)))
-(is (= [0 1   3 4] (drop-at (range 5) 2)))
-(is (= [0 1 2   4] (drop-at (range 5) 3)))
-(is (= [0 1 2 3  ] (drop-at (range 5) 4)))
+(is (= [  1 2] (drop-at (range 3) 0)))
+(is (= [0   2] (drop-at (range 3) 1)))
+(is (= [0 1  ] (drop-at (range 3) 2)))
 ----
 
 Unlike the raw `take` and `drop` functions on which it is based, `drop-at` will throw an exception
@@ -488,11 +486,9 @@ And, of course, you can also replace an element in a sequence:
    elem     :- s/Any]
    ...)
 
-(is (= [9 1 2 3 4] (replace-at (range 5) 0 9)))
-(is (= [0 9 2 3 4] (replace-at (range 5) 1 9)))
-(is (= [0 1 9 3 4] (replace-at (range 5) 2 9)))
-(is (= [0 1 2 9 4] (replace-at (range 5) 3 9)))
-(is (= [0 1 2 3 9] (replace-at (range 5) 4 9)))
+(is (= [9 1 2] (replace-at (range 3) 0 9)))
+(is (= [0 9 2] (replace-at (range 3) 1 9)))
+(is (= [0 1 9] (replace-at (range 3) 2 9)))
 ----
 
 As with `drop-at`, `replace-at` will throw an exception for invalid values of `index`.
