--- a/README.adoc
+++ b/README.adoc
@@ -4,14 +4,7 @@
 
 Leiningen coordinates:
 
-For Clojure 1.8, please use 
-
-  [tupelo "0.1.72"] 
-
-Versions 0.9.* of Tupelo are currently in flux adapting to the 1.9.0-alpha* versions of Clojure
-under development.  Please avoid these versions until the Clojure 1.9.0 API settles down.
-
-    image:http://clojars.org/tupelo/latest-version.svg[ http://clojars.org/tupelo ]
+image:http://clojars.org/tupelo/latest-version.svg[ http://clojars.org/tupelo ]
 
 === The Tupelo API Docs http://cloojure.github.io/doc/tupelo[are posted on GitHub Pages]
 
@@ -94,10 +87,10 @@ normally specify `(:use tupelo.core)` in our namespace declaration:
 [source,clojure]
 ----
 (ns my.proj
-  (:use tupelo.core)
-  (:require [tupelo.datomic   :as td]
-            [clojure.string   :as str]
+  (:require [tupelo.core     :as t]
+            [clojure.string  :as str]
             ... ))
+(t/refer-tupelo)  ; refer many of the most common functions into the current namespace
 ----
 
 === tupelo.core - Basic functions
