--- a/changelog.adoc
+++ b/changelog.adoc
@@ -3,6 +3,10 @@
 
 == Change Log
 
+.2016-9-14 *** Breaking Change ***
+- `tupelo.core/any?` renamed to `has-some?` to avoid conflict with new function `clojure.core/any?`
+- `tupelo.core/has-none?` added as synonym for `clojure.core/not-any?`
+
 .2016-6-12 Beginning with version 0.9.0 Tupelo will require
 - Clojure 1.9.0-alpha5 or later
 - Java 1.8
