--- a/README.adoc
+++ b/README.adoc
@@ -868,6 +868,21 @@ the sequence, we may use the function `only`:
   for a length-1 sequence S, (first S), (last S) and (only S) are equivalent."
 ----
 
+=== Getting Past Second Base
+
+Clojure has the functions `first`, `second`, and requires the use of `nth` for any subsequent
+position.  Sometimes it is handy to have a quick way to grab the 3rd item from a sequential
+collection. Tupelo provides the `third` function to fill this void:
+
+[source,clojure]
+----
+(is= nil (third [       ]))
+(is= nil (third [1      ]))
+(is= nil (third [1 2    ]))
+(is= 3   (third [1 2 3  ]))
+(is= 3   (third [1 2 3 4]))
+----
+
 === The Truth Is Not Ambiguous
 
 Clojure marries the worlds of Java and Lisp. Unfortunately, these two worlds have different ideas of
