--- a/README.adoc
+++ b/README.adoc
@@ -6,6 +6,11 @@ Leiningen coordinates:
 
 image:http://clojars.org/tupelo/latest-version.svg[ http://clojars.org/tupelo ]
 
+The current version of Tupelo makes use of `clojure.spec` and therefore requires Clojure
+`1.9.0-alpha13` or higher.  It also requires Java 1.8.  
+
+The newest version of Tupelo using Clojure 1.8 is `[tupelo "0.1.69"]`
+
 === The Tupelo API Docs link:http://cloojure.github.io/doc/tupelo[are posted on GitHub Pages]
 
 == Tupelo Overview
@@ -91,7 +96,7 @@ normally refer tupelo.core into our namespace as follows:
 [source,clojure]
 ----
 (ns my.proj
-  (:require [tupelo.core     :as t]
+  (:require [tupelo.core :as t]
             ... ))
 (t/refer-tupelo)  ; refer many of the most common functions into the current namespace
 ----
