--- a/README.adoc
+++ b/README.adoc
@@ -608,6 +608,130 @@ The unit test shows these functions in action:
 (is (= true   (has-none? odd? []      ) ))
 ----
 
+=== Searching for entries in Collections, Maps, and Sets
+
+There are convenient functions for this purpose [in the Tupelo library][1].  In particular, the
+functions `contains-elem?`, `contains-key?`, and `contains-val?` are very useful.  
+
+`contains-elem?` is the most generic and is intended for vectors or any other clojure `seq`:
+
+[source,clojure]
+----
+(testing "vecs"
+  (let [coll (range 3)]
+    (isnt (contains-elem? coll -1))
+    (is   (contains-elem? coll  0))
+    (is   (contains-elem? coll  1))
+    (is   (contains-elem? coll  2))
+    (isnt (contains-elem? coll  3))
+    (isnt (contains-elem? coll  nil)))
+
+  (let [coll [ 1 :two "three" \4]]
+    (isnt (contains-elem? coll  :no-way))
+    (isnt (contains-elem? coll  nil))
+    (is   (contains-elem? coll  1))
+    (is   (contains-elem? coll  :two))
+    (is   (contains-elem? coll  "three"))
+    (is   (contains-elem? coll  \4)))
+
+  (let [coll [:yes nil 3]]
+    (isnt (contains-elem? coll  :no-way))
+    (is   (contains-elem? coll  :yes))
+    (is   (contains-elem? coll  nil))))
+----
+
+Here we see that for an integer range or a mixed vector, `contains-elem?` works as expected for both
+existing and non-existant elements in the collection.  For maps, we can also search for any
+key-value pair (expressed as a len-2 vector):
+
+[source,clojure]
+----
+(testing "maps"
+   (let [coll {1 :two "three" \4}]
+     (isnt (contains-elem? coll nil ))
+     (isnt (contains-elem? coll [1 :no-way] ))
+     (is   (contains-elem? coll [1 :two]))
+     (is   (contains-elem? coll ["three" \4])))
+   (let [coll {1 nil "three" \4}]
+     (isnt (contains-elem? coll [nil 1] ))
+     (is   (contains-elem? coll [1 nil] )))
+   (let [coll {nil 2 "three" \4}]
+     (isnt (contains-elem? coll [1 nil] ))
+     (is   (contains-elem? coll [nil 2] ))))
+----
+
+It is also straightforward to search a set:
+
+[source,clojure]
+----
+(testing "sets"
+  (let [coll #{1 :two "three" \4}]
+    (isnt (contains-elem? coll  :no-way))
+    (is   (contains-elem? coll  1))
+    (is   (contains-elem? coll  :two))
+    (is   (contains-elem? coll  "three"))
+    (is   (contains-elem? coll  \4)))
+
+  (let [coll #{:yes nil}]
+    (isnt (contains-elem? coll  :no-way))
+    (is   (contains-elem? coll  :yes))
+    (is   (contains-elem? coll  nil)))))
+----
+
+For maps & sets, it is simpler (& more efficient) to use `contains-key?` to find a map entry or a
+set element:
+
+[source,clojure]
+----
+(deftest t-contains-key?
+  (is   (contains-key?  {:a 1 :b 2} :a))
+  (is   (contains-key?  {:a 1 :b 2} :b))
+  (isnt (contains-key?  {:a 1 :b 2} :x))
+  (isnt (contains-key?  {:a 1 :b 2} :c))
+  (isnt (contains-key?  {:a 1 :b 2}  1))
+  (isnt (contains-key?  {:a 1 :b 2}  2))
+
+  (is   (contains-key?  {:a 1 nil   2} nil))
+  (isnt (contains-key?  {:a 1 :b  nil} nil))
+  (isnt (contains-key?  {:a 1 :b    2} nil))
+
+  (is   (contains-key? #{:a 1 :b 2} :a))
+  (is   (contains-key? #{:a 1 :b 2} :b))
+  (is   (contains-key? #{:a 1 :b 2}  1))
+  (is   (contains-key? #{:a 1 :b 2}  2))
+  (isnt (contains-key? #{:a 1 :b 2} :x))
+  (isnt (contains-key? #{:a 1 :b 2} :c))
+
+  (is   (contains-key? #{:a 5 nil   "hello"} nil))
+  (isnt (contains-key? #{:a 5 :doh! "hello"} nil))
+
+  (throws? (contains-key? [:a 1 :b 2] :a))
+  (throws? (contains-key? [:a 1 :b 2]  1)))
+----
+
+And, for maps, you can also search for values with `contains-val?`:
+
+[source,clojure]
+----
+(deftest t-contains-val?
+  (is   (contains-val? {:a 1 :b 2} 1))
+  (is   (contains-val? {:a 1 :b 2} 2))
+  (isnt (contains-val? {:a 1 :b 2} 0))
+  (isnt (contains-val? {:a 1 :b 2} 3))
+  (isnt (contains-val? {:a 1 :b 2} :a))
+  (isnt (contains-val? {:a 1 :b 2} :b))
+
+  (is   (contains-val? {:a 1 :b nil} nil))
+  (isnt (contains-val? {:a 1 nil  2} nil))
+  (isnt (contains-val? {:a 1 :b   2} nil))
+
+  (throws? (contains-val?  [:a 1 :b 2] 1))
+  (throws? (contains-val? #{:a 1 :b 2} 1)))
+----
+
+As seen in the test, each of these functions works correctly when for searching for `nil` values.
+
+
 === Focus on Vectors
 
 Clojure's seq abstraction (and lazy seq's) is very useful, but sometimes you just want everything to
