--- a/README.adoc
+++ b/README.adoc
@@ -755,7 +755,8 @@ results in a nice simple vector.
 
 Clojure training materials seem to vary somewhat in the recommended form for the generation of a lazy sequence. This
 is further complicated by the legacy function `lazy-cat` which can easily cause an out-of-memory error
-(see S. Sierra post).  An example of the simplest form is:
+(see S. Sierra post).  A simpler form is possible using `tupelo.core/lazy-cons` macro.  An example
+of this form in use is:
 
 [source,clojure]
 ----
@@ -777,11 +778,12 @@ The `(when <condition>)` form returns `nil` to signal the termination of the laz
 *_Implementation note_*
 
 The structure of `when` and `lazy-cons` is not required, but is probably the simplest of multiple
-possible choices. The new macro `(lazy-cons val (recursive-call...))` itself is nothing but a simplification
-of the native form `(lazy-seq (cons val (recursive-call...)))` which reduces typing and the possibility of errors.
+possible choices. The new form of `(lazy-cons val (recursive-call...))` is nothing but a simplification
+of the original `clojure.core` form `(lazy-seq (cons val (recursive-call...)))` which reduces typing and 
+the possibility of errors.
 
-Please note that this implementation of `lazy-cons` bears no relation to the historical `lazy-cons` which was removed
-from Clojure circa 2008.
+Please note that `tupelo.core/lazy-cons` bears no relation to the historical `lazy-cons` which was
+briefly considered for `clojure.core` circa 2008.
 
 === Generator Functions for Lazy Sequences (a la Python)
 
