--- a/README.adoc
+++ b/README.adoc
@@ -383,10 +383,10 @@ combine like collections together into a result collection of the same type:
 [source,clojure]
 ----
 ; Glue together like collections:
-(is (= (glue [ 1 2] [ 3 4] [ 5 6] )       [ 1 2 3 4 5 6 ]  ))
-(is (= (glue {:a 1} {:b 2} {:c 3} )       {:a 1 :c 3 :b 2} ))
-(is (= (glue #{1 2} #{3 4} #{6 5} )      #{ 1 2 6 5 3 4 }  ))
-(is (= (glue "I" " like " \a " nap!" )   "I like a nap!"   ))
+(is (= (glue [ 1 2] '(3 4) [ 5 6] )       [ 1 2 3 4 5 6 ]  ))   ; all sequential (vectors & lists)
+(is (= (glue {:a 1} {:b 2} {:c 3} )       {:a 1 :c 3 :b 2} ))   ; all maps
+(is (= (glue #{1 2} #{3 4} #{6 5} )      #{ 1 2 6 5 3 4 }  ))   ; all sets
+(is (= (glue "I" " like " \a " nap!" )   "I like a nap!"   ))   ; all text (strings & chars)
 
 ; If you want to convert to a sorted set or map, just put an empty one first:
 (is (= (glue (sorted-map) {:a 1} {:b 2} {:c 3})   {:a 1 :b 2 :c 3} ))
@@ -399,7 +399,7 @@ the same type. The allowable input types are:
   - all sequential: any mix of lists & vectors (vector result)
   - all maps (sorted or not)
   - all sets (sorted or not)
-  - all textual: any mix of strings & characters (string result)
+  - all text: any mix of strings & characters (string result)
 
 === Adding Values to the Beginning or End of a Sequence
 
