--- a/README.adoc
+++ b/README.adoc
@@ -475,19 +475,19 @@ and then use `glue` or `concat`:
 
 It may be inconvenient to always wrap the scalar values into vectors just to combine them with an
 occasional vector value. Instead, it might be more convenient to ***unwrap*** the vector values,
-then combine the result with other scalars. We can do that with the `->vec` and `unwrap` functions:
+then combine the result with other scalars. We can do that with the `->vector` and `unwrap` functions:
 
 [source,clojure]
 ----
-(->vec 1 2 3 4 5 6 7 8 9)             =>  [1 2 3 4 5 6 7 8 9]
-(->vec 1 (unwrap [2 3 4 5 6 7 8]) 9)  =>  [1 2 3 4 5 6 7 8 9]
+(->vector 1 2 3 4 5 6 7 8 9)             =>  [1 2 3 4 5 6 7 8 9]
+(->vector 1 (unwrap [2 3 4 5 6 7 8]) 9)  =>  [1 2 3 4 5 6 7 8 9]
 ----
 
 It will also work recursively for nested `unwrap` calls:
 
 [source,clojure]
 ----
-(->vec 1 (unwrap [2 3 (unwrap [4 5 6]) 7 8]) 9)  =>  [1 2 3 4 5 6 7 8 9]
+(->vector 1 (unwrap [2 3 (unwrap [4 5 6]) 7 8]) 9)  =>  [1 2 3 4 5 6 7 8 9]
 ----
 
 
