--- a/README.adoc
+++ b/README.adoc
@@ -125,15 +125,15 @@ affecting the result of the expression.  In this case, `spy` printed the value `
 the `(inc)` expression. Then, the value `2` continued to flow through the following expressions in
 the pipeline so that the return value of the expression is unchanged.
 
-You can add in a string message to label each `spy` output:
+You can add in a keyword message to label each `spy` output:
 [source,clojure]
 ----
 (-> 1
     (inc)
-    (spy :msg "after inc")      ; add a custom message
+    (spy :after-inc)      ; add a custom keyword message
     (* 2))
-; after inc => 2                ; spy output is labelled with message
-4                               ; return value is unchanged
+; :after-inc => 2          ; spy output is labeled with keyword message
+4                         ; return value is unchanged
 ----
 Note that `spy` works equally well inside either a "thread-first" or a "thread-last" form
 (e.g. using `\->` or `\->>`), without requiring any changes.
@@ -142,36 +142,41 @@ Note that `spy` works equally well inside either a "thread-first" or a "thread-l
 ----
 (->> 1
     (inc)
-    (spy :msg "after inc")      ; spy works equally with both  ->  and  ->>  forms
+    (spy :after-inc)      ; spy works equally with both  ->  and  ->>  forms
     (* 2))
-; after inc => 2
+; :after-inc => 2
 4
 ----
 
-How does `spy` accomplish this trick? The answer is that the keyword `:msg` is required just before
-the message string, and it is this which allows `spy` to detect whether it is in a thread-first or
-thread-last form, and thus produce the correct output. As a bonus for debugging, the value is output
-using (pr-str ...) so that numbers and strings are unambiguous in the output:
+How does `spy` accomplish this trick? The answer is that the keyword message is assumed to be the
+label, since interesting debug values are more likely to be strings, numbers, or collections like
+vectors & maps (if both args are keywords, an exception is thrown; use some other technique for
+debugging this use-case).  Thus, `spy` can detect whether it is in a thread-first or thread-last
+form, and then label the output correctly.  A side benefit is that keywords like `:after-inc` or
+just `:110` are easy to grep for in output log files.
+
+As a bonus for debugging, the value is output using (pr-str ...) so that numbers and strings are
+unambiguous in the output:
 
 [source,clojure]
 ----
 (-> 30
     (+ 4)
-    (spy :msg "dbg")
+    (spy :dbg)
     (* 10))
-; dbg => 34            ; integer result = 34
+; :dbg => 34            ; integer result = 34
 340
 
 (-> "3"
     (str "4")
-    (spy :msg "dbg")
+    (spy :dbg)
     (str "0"))
-; dbg => "34"          ; string result = "34"
+; :dbg => "34"          ; string result = "34"
 "340"
 ----
 
 Sometimes you may prefer to print out the literal expression instead of a
-message. In this case, just use `spyx` (short for "spy expression") :
+keyword label. In this case, just use `spyx` (short for "spy expression") :
 [source,clojure]
 ----
 (it-> 1                 ; tupelo.core/it-> 
@@ -180,14 +185,16 @@ message. In this case, just use `spyx` (short for "spy expression") :
 ; (inc it) => 2     ; the expression is used as the label
 4
 ----
+
 In other instances, you may wish to use `spyxx` to display the expression, its
 type, and its value:
 [source,clojure]
 ----
 (defn mystery-fn [] (into (sorted-map) {:b 2 :a 1}))
 (spyxx (mystery-fn))
-; (mystery-fn) => clojure.lang.PersistentTreeMap->{:a 1, :b 2}
+;  (mystery-fn) =>  <#clojure.lang.PersistentTreeMap {:a 1, :b 2}>"
 ----
+
 Non-pure functions (i.e. those with side-effects) are safe to use with `spy`.
 Any expression supplied to spy will be evaluated only once.
 
@@ -199,14 +206,14 @@ Sometimes you may just want to save some repetition for a simple printout:
 ; answer => 42
 ----
 
-To be precise, the function signatures for `spy` are:
+To be precise, the function signatures for the `spy` family are:
 [source,clojure]
 ----
-(spy <expr>)                ; print value of <expr> w/o custom message string
-(spy <expr> :msg msg-str)   ; works with ->   (the ":msg" keyword is required)
-(spy :msg msg-str <expr>)   ; works with ->>  (the ":msg" keyword is required)
-(spyx  <expr>)              ; prints <expr> and its value
-(spyxx <expr>)              ; prints <expr>, its type, and its value
+(spy <expr>)             ; print value of <expr> w/o custom message string
+(spy <expr> :kw-label)   ; works with -> 
+(spy :kw-label <expr>)   ; works with ->>  
+(spyx  <expr>)           ; prints <expr> and its value
+(spyxx <expr>)           ; prints <expr>, its type, and its value
 ----
 
 If you are debugging a series of nested function calls, it can often be handy to indent the `spy`
@@ -235,10 +242,10 @@ x => :b
 We all love to use the threading macros `\->` and `\->>` for certain tasks, but they only work if
 all of the forms should be threaded into the first or last argument.
 
-The built-in threading macro `as\->` can avoid this requirement, but the order of the first
-expression and the placeholder symbol is arguably backwards from what users would expect. Also,
-there is often no obvious name to use for the placeholder symbol.  Re-using a good idea from Groovy,
-we simply use the symbol `it` as the placeholder symbol in each expression to represent the value of
+The built-in threading macro `as\->` can avoid this problem, but the order of the first expression
+and the placeholder symbol is arguably backwards from what most users would expect. Also, there is
+often no obvious name to use for the placeholder symbol.  Re-using a good idea from Groovy, we
+simply use the symbol `it` as the placeholder symbol in each expression to represent the value of
 the previous result.
 
 [source,clojure]
@@ -256,20 +263,17 @@ placeholder value:
 [source,clojure]
 ----
 (it-> 3
-      (spy :msg :initial it)
+      (spy :initial it)
       (let [x it]
         (inc x))
-      (spy it :msg 222)
+      (spy it :222)
       (* it 2)
       (spyx it))
 ; :initial => 3
-; 222 => 4
+; :222 => 4
 ; it => 8
 8           ; return value
 ----
-
-Note that the `:msg` argument does not need to be a string. As shown above, keywords, integers, etc
-may be used.
 
 === Map Value Lookup
 
