--- a/it-thread.adoc
+++ b/it-thread.adoc
@@ -1,8 +1,7 @@
 # Usage examples for `tupelo.core/it->`
 
-  Homepage:      https://github.com/cloojure/tupelo
-
-  Lein coords:   [tupelo "0.9.75"]
+####    Homepage:      https://github.com/cloojure/tupelo
+####    Lein coords:   [tupelo "0.9.75"]
 
 Explicit threading macro:  (it-> ...)
 
